--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.4",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2"
   }
